cloudformation/Demo-examples/init.yaml
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  myKeyPair: 
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"
  mySecuritygroup: 
    Description: Subnet IDs
    Type: "AWS::EC2::SecurityGroup::GroupName"

Mappings: 
  RegionMap: 
    us-east-1: 
      "HVM64": "ami-0ff8a91507f77f867"
    us-west-1: 
      "HVM64": "ami-0bdb828fd58c52235"
    eu-west-1: 
      "HVM64": "ami-047bb4163c506cd98"
    ap-southeast-1: 
      "HVM64": "ami-08569b978cc4dfa10"
    ap-northeast-1: 
      "HVM64": "ami-06cd52961ce9f0d85"

Resources:
  Webserver: 
    Type: AWS::EC2::Instance
    Metadata: 
      AWS::CloudFormation::Init:
        config: 
          packages:
            yum:
              httpd: []
              php: []
              wget: []
              unzip: []
              git:  []
          commands:
            test:
              command: "mkdir web && cd web/ && wget https://www.tooplate.com/zip-templates/2119_gymso_fitness.zip && unzip 2119_gymso_fitness.zip  && sudo cp -r 2119_gymso_fitness/* /var/www/html/"
          files:
            /var/www/html/hello.html:
              content: !Sub |
                <!DOCTYPE html>
                <html>
                <body>

                <h1>Welcome to CloudFormation.</h1>
                <p>This site is deployed by CloudFormation.</p>

                </body>
                </html>
          services:
            sysvinit:
              httpd:
                enabled: "true"
                ensureRunning: "true"
    Properties: 
      InstanceType: !Ref InstanceTypeParameter
      ImageId: 
        Fn::FindInMap: [ RegionMap, !Ref AWS::Region, HVM64 ]
      KeyName: !Ref myKeyPair
      Tags: 
        - Key: Name
          Value: Linux-server
      SecurityGroupIds: [ !Ref mySecuritygroup ]
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash -xe
            yum install -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource Webserver --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource Webserver --region ${AWS::Region}

  Linuxserversg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host
      VpcId: vpc-0b09003459c1fd64b
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 76.34.232.130/32
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  
Outputs:
  PrivateIPIdOutput:
    Value: !GetAtt Webserver.PrivateIp
  PublicDnsNameOutput:
    Value: !GetAtt Webserver.PublicDnsName
