cloudformation/Demo-examples/parameters.yaml
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  myKeyPair: 
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"
  mySecuritygroup: 
    Description: Subnet IDs
    Type: "AWS::EC2::SecurityGroup::GroupName"

Mappings: 
  RegionMap: 
    us-east-1: 
      "HVM64": "ami-0ff8a91507f77f867"
    us-west-1: 
      "HVM64": "ami-0bdb828fd58c52235"
    eu-west-1: 
      "HVM64": "ami-047bb4163c506cd98"
    ap-southeast-1: 
      "HVM64": "ami-08569b978cc4dfa10"
    ap-northeast-1: 
      "HVM64": "ami-06cd52961ce9f0d85"

Resources:
  MyInstance: 
    Type: AWS::EC2::Instance
    Properties: 
      InstanceType: !Ref InstanceTypeParameter
      ImageId: 
        Fn::FindInMap: [ RegionMap, !Ref AWS::Region, HVM64 ]
      KeyName: !Ref myKeyPair
      Tags: 
        - Key: Name
          Value: Linux-server
      SecurityGroupIds: [ !Ref mySecuritygroup ]

  Linuxserversg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host
      VpcId: vpc-0b09003459c1fd64b
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 76.34.232.130/32
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0:
  
Outputs:
  PrintSomeData:
    Value: 
      - !GetAtt MyInstance.KernelId, 
      - !GetAtt MyInstance.PublicDnsName
